--- a/css/base.css
+++ b/css/base.css
@@ -17,7 +17,7 @@ html {
 
 body {
 		color: #2F2F2F;
-		font-family: 'Roboto' , sans-serif;
+		font-family: 'Rajdhani', sans-serif;
 		font-style: normal;
 		font-weight: 300;
 	    line-height: 1.6em;
@@ -32,7 +32,7 @@ p {
 }
 
 h1 {
-	font-family: 'Roboto Slab', serif;
+	font-family: 'ZCOOL QingKe HuangYou', cursive;
 	font-weight: 500;
 	font-size: 3.250em;
 	line-height: 1.1;
