--- a/css/style - Copy.css
+++ b/css/style - Copy.css
@@ -90,32 +90,18 @@ nav li a:active {
 }
 
 /* Culture */
-.culture-copy {
+.culture {
 	width: 100%;
 	padding: 100px 0 100px 0;
 	background-color: #7296B4;
-	
 }
 
 .culture {
 	width: 100%;
 	padding: 100px 0 100px 0;
 	background-color: #7296B4;
-	
 }
 
-/* About Us */
-.about {
-	width: 100%;
-	padding: 100px 0 100px 0;
-	background-color: #7296B4;
-}
-
-.about {
-	width: 100%;
-	padding: 100px 0 100px 0;
-	background-color: #7296B4;
-}
 
 
 
