--- a/css/base.css
+++ b/css/base.css
@@ -17,7 +17,7 @@ html {
 
 body {
 		color: #2F2F2F;
-		font-family: 'Rajdhani', sans-serif;
+		font-family: 'Raleway', sans-serif;
 		font-style: normal;
 		font-weight: 300;
 	    line-height: 1.6em;
