--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ nav li a:active {
 
 /* About Us */
 .about {
-	width: 100%;
+	width: 460px;
 	padding: 100px 0 100px 0;
 	background-color:#efefef;
 }
@@ -128,7 +128,8 @@ nav li a:active {
 
 .testimonials img{
 	width:140px;
-	margin-bottom: 10px;
+	height:140px;
+	margin-bottom: 4px;
 	border-radius: 50%;
 	
 }
@@ -137,7 +138,8 @@ nav li a:active {
 
  /* Projects */
 .projects{
-	width:100%;
+	width:200px;
+	height:300px;
 	padding:100px 0;
 	background-color: #efefef;
 	
