--- a/css/style.css
+++ b/css/style.css
@@ -2,20 +2,23 @@
 
 header {
 	width: 100%;
+	height: 80px;
 	background-color: #7296B4;
-	position: fixed;
 	top: 0;
 	z-index: 1000;
 	padding: 15px 0 8px 0;
 }
-.logo {
-	width: 200px;
-	height: 20px;
+.name {
+	width: 400px;
+	height: 90px;
 	float: left;
+	display: block;
 	margin-top: 15px;
-	background: url("../images/summer.svg") no-repeat;
+	background: url("../images/name.svg") no-repeat;
 	
 }
+
+
 
 nav { 
     
@@ -69,6 +72,27 @@ nav li a:active {
 	text-align: center;
 	font-size: 1.2em;
 	
+}
+
+.type-overlay {
+	top: 30px;
+	width: 150%;
+	z-index: 5;
+	text-align: center;
+	text-transform: uppercase;
+	position: absolute;
+	color: #ffffff;
+}
+
+.overlay-text {
+	top: 750px;
+	width: 20%;
+	z-index: 5;
+	text-align: center;
+	text-transform: uppercase;
+	position: relative;
+	color: #ffffff;
+	font-size: 1.3em;
 }
 
 
@@ -139,7 +163,7 @@ nav li a:active {
 	width: 100%;
 	padding: 100px 0;
 	float: left;
-	background: #efefef;
+	background: #7296B4;
 }
 
 
@@ -195,7 +219,7 @@ nav li a:active {
 
 /* Memberships */
  
-.memberships {
+.tours {
 	width: 100%;
 	padding:100px 0;
 	background-color: #7296B4;
@@ -275,63 +299,239 @@ nav li a:active {
 
 
 
+/* Maps/ Contact Us */
 
-
-
-
-
-
-/* Footer */
-
-footer {
+#get-involved-form {
 	width: 100%;
-	padding: 90px 0 80px 0;
-	text-align: center;
-	background-color: #3c3c3c;
-	
+	padding: 100px 0;
+	float: left;
+	background: #efefef;
 }
+.get-involved-form {
+	width:460px;
+	font-size: 0.9em;
+}
+
+.get-involved-form input[type="text"],
+.get-involved-form input[type="text"],
+.get-involved-form textarea,
+.get-involved-form select {
+	width: 100%;
+	height: 35px;
+	margin-bottom: 25px;
+	padding: 5px 5px 5px 10px;
+	font-size: 1.2em;
+	line-height: 1.5;
+	background: #FFFFFF;
+	border: none;
+}
+
+.get-involved-form select {
+	appearance: none;
+	text-indent: 0.01px;
+	text-overflow: '';
+	width: 100%;
+	height: 35px;
+}
+
+.get-involved-form textarea {
+	height: 190px;
+}
+
+.button {
+	display: block;
+	float: right;
+}
+
+.get-involved-form input.button {
+	text-transform: uppercase;
+	letter-spacing: 0.2em;
+	text-indent: 0.2em;
+	font-weight: 700;
+	width: 125px;
+	height: 40px;
+	background: #F0AF5D;
+	border: 1px solid #F0AF5D;
+	color: #000000;
+	border-radius: 35px;
+	cursor: pointer;
+
+}
+
+.get-involved-link {
+	font-size: .7em;
+	letter-spacing: .09em;
+	text-transform: uppercase;
+	font-weight: 900;
+	color: #B8C8E6;
+}
+
+get-involved li a {
+	color: #000000;
+	text-decoration: none;
+}
+
+get-involved li a:link {
+	color: #000000;
+	text-decoration: none;
+}
+
+a:visited {
+	color: #000000;
+	text-decoration: none;
+}
+
+get-involved li a:hover{
+	color: #ffffff;
+	text-decoration: none;
+}
+
+get-involved li a:active{
+	color: #56627A;
+	text-decoration: none;
+}
+
+/* Audio */
+
+#audio {
+	width: 100%;
+	padding: 100px 0;
+	background: #4c4c4c;
+}
+
+audio {
+	width: 100%;
+}
+
+/* Video */
+
+#video {
+	width: 100%;
+	padding: 100px 0;
+	background: #000000;
+}
+
+/*  Footer */
+footer {
+  width: 100%;
+  background-color: #7296B4;
+  float: left;
+  text-align: left;
+  padding: 100px 0 0 0;
+}
+
 footer a:link {
-	color: #959595;
-	text-decoration: none;
+  color: #ffffff;
+  text-decoration: none;
 }
-
 footer a:visited {
-	color: #959595;
-	text-decoration: none;
+  color: #ffffff;
+  text-decoration: none;
 }
-
 footer a:hover {
-	color: #ffffff;
-	text-decoration: none;
+  color: #ffffff;
+}
+footer a:active {
+  color: #ffffff;
+}
+.footer-logo img {
+  float: left;
+  height: 161px;
+  padding: 8px;
+}
+.footer-nav li {
+  list-style-type: none;
+  color: #ffffff;
+}
+.footer-nav a:link {
+  text-decoration: none;
+  cursor: pointer;
+}
+.footer-nav ul li a:visted {
+  color: #000000;
+  text-decoration: none;
+  cursor: pointer;
+}
+.footer-nav ul li a:hover {
+  color: #000000;
+  text-decoration: none;
+  cursor: pointer;
+}
+.footer-nav ul li a:active {
+  color: #000000;
+}
+.social-icons li {
+  list-style-type: none;
+  display: inline-block;
+  color: #ffffff;
+  padding-right: 10px;
+}
+.social-icons a:link {
+  text-decoration: none;
+  cursor: pointer;
+}
+.social-icons ul li a:visted {
+  color: #ffffff;
+  text-decoration: none;
+  cursor: pointer;
+}
+.social-icons ul li a:hover {
+  color: #ffffff;
+  text-decoration: none;
+  cursor: pointer;
+}
+.social-icons ul li a:active {
+  color: #ffffff;
 }
 
-footer a:active {
-	color: #ffffff;
-	text-decoration: none;
+.fa-facebook-square,
+.fa-twitter-square,
+.fa-instagram {
+  color: #ffffff;
+  font-size: 1.9em;
+}
+
+.unesco-logo {
+	width: 89px;
+	height: 69px;
+	margin-left: 40px;
 }
 
 .copyright {
-	widht: 100%;
-	color: #959595;
-	
-}
-.copyright p {
-	margin-bottom: 0;
-}
-
-.fa-linkedin,
-.fa-twitter-square,
-.fa-facebook-square {
-	font-size: 2em;
-	margin: 20px 5px 0 5px;
-	color: #959595;
+  display:block;
+  float: left;
+  background-color: #7296B4;
+  text-align: center;
+  width: 100%;
+  color: #ffffff;
+  padding: 25px 0;
+  margin-top:100px;
 }
 
-.fa-linkedin:hover,
-.fa-twitter-square:hover,
-.fa-facebook-square {
-	color: #ffffff;
+.copyright a:link {
+  color: #ffffff;
+  text-decoration: none;
+  cursor: pointer;
 }
+.copyright a:visted {
+  color: #ffffff;
+  text-decoration: none;
+  cursor: pointer;
+}
+.copyright a:hover {
+  color: #ffffff;
+  text-decoration: none;
+  cursor: pointer;
+}
+.copyright a:active {
+  color: #ffffff;
+}
+
+
+
+
+
+
 
 
 /* Desktop and Laptops */
