--- a/css/base.css
+++ b/css/base.css
@@ -19,7 +19,7 @@ body {
 		color: #2F2F2F;
 		font-family: 'Raleway', sans-serif;
 		font-style: normal;
-		font-weight: 300;
+		font-weight: 400;
 	    line-height: 1.6em;
 		text-align: left;
 		font-size: 100%;
@@ -34,38 +34,38 @@ p {
 
 h1 {
 	font-family: 'ZCOOL QingKe HuangYou', cursive;
-	font-weight: 500;
+	font-weight: 400;
 	font-size: 3.250em;
 	line-height: 1.1;
 }
 h2 {
 	font-family: 'ZCOOL QingKe HuangYou', cursive;
-	font-weight: 500;
+	font-weight: 400;
 	font-size: 3.250em;
 	line-height: 1.1;
 	
 }
 h3 {
 	font-family: 'ZCOOL QingKe HuangYou', cursive;
-	font-weight: 500;
+	font-weight: 400;
 	font-size: 1.500em;
 	line-height: 1.1;
 }
 h4 {
-	font-family: 'Roboto Slab', serif;
+	font-family: 'Raleway', sans-serif;
 	font-weight: 900;
 	font-size: 1em;
 	line-height: 1.1;
 	marign-bottom: 10px;
 }
 h5 {
-	font-family: 'Roboto Slab', serif;
+	font-family: 'Raleway', sans-serif;
 	font-weight: 500;
 	font-size: 1em;
 	line-height: 1.1;
 }
 h6 {
-	font-family: 'Roboto Slab', serif;
+font-family: 'Raleway', sans-serif;
 	font-weight: 500;
 	font-size: 1em;
 	line-height: 1.1;
