--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ header {
 .name {
 	width: 500px;
 	height: 90px;
+	color: white;
 	float: left;
 	display: block;
 	
@@ -18,12 +19,14 @@ header {
 	
 }
 
-
+.name h2 {
+	font-size: 30px;
+}
 
 nav { 
     
 	float: right;
-	
+	line-height: 60px;
 	
 }
 
