--- a/css/style.css
+++ b/css/style.css
@@ -159,14 +159,12 @@ section {
 	background-color: #7296B4;
 }
 
-.testimonials img{
+
+.testimonials .culumns img{
 	width:140px;
 	height:140px;
-	margin-bottom: 4px;
-	border-radius: 50%;
-	
-}
-
+	margin-bottom: 3px;
+	border-radius: 50%;}
 /*Portfolio*/
 .portfolio {
 	width: 100%;
