--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,14 @@ nav li a:active {
 	
 	
 }
+.testimonials .row {
+  width: 80%;
+  margin: 50px auto;
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-around;
+}
+
 
 section {
 	padding: 50px 0;
