--- a/css/base.css
+++ b/css/base.css
@@ -21,7 +21,7 @@ body {
 		font-style: normal;
 		font-weight: 400;
 	    line-height: 1.6em;
-		text-align: left;
+		text-align: center;
 		font-size: 100%;
 	}
 
@@ -50,6 +50,7 @@ h3 {
 	font-weight: 400;
 	font-size: 1.500em;
 	line-height: 1.1;
+	text-align: center;
 }
 h4 {
 	font-family: 'Raleway', sans-serif;
